my profile page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+      body {
+          background-image: url("/profile/images/DSCF1019.jpg");
+          background-repeat: no-repeat;
+          background-size: cover; /* You can adjust this property to control how the background image is displayed */
+      }
+  </style>
   </head>
+
   <body>
     <div class="container card-white">
       <h1>HELLO! I'M JUNE NICE TO MEET YOU</h1>
-      <img src="photo_wagon.png" style="width: 300px" class="center-image img-crop" alt="profil_pic">
+      <img src="/profile/images/photo_wagon.png" style="width: 300px" class="center-image img-crop" alt="profil_pic">
       <p id="text-center">I'm from batch 1312 of le wagon! I study web dev</p>
     </div>
 
